Sun Jun 21 22:33:05 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* load.c (Init_load): $: must be readonly.  [ruby-dev:38690]

	* ruby.c (ruby_prog_init): $-W must be readonly.  [ruby-dev:38691]

Sun Jun 21 10:47:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::Entry_#copy_file): open with
	  default umask.  [ruby-core:23952]

Sun Jun 21 10:46:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (enc_arg): default interanl encoding may not be set.
	  [ruby-core:23932]

Sat Jun 20 21:11:43 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* numeric.c (num_div): don't use num_floor which is actually
	  flo_floor.

	* numeric.c (num_modulo): don't call '%'.

	* numeric.c (num_divmod): use num_modulo.

	* numeric.c: defined '%'.

	* rational.c (nurat_idiv,nurat_mod,nurat_divmod,nurat_rem): removed.
	
Sat Jun 20 20:28:44 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: edited rdoc.

	* numeric.c: ditto.

Sat Jun 20 08:56:47 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: edited rdoc.

	* rational.c: ditto.

	* numeric.c: ditto.

Sat Jun 20 07:17:52 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/monitor.rb (MonitorMixin::extend_object): should use
	  #__send__ instead of #send to avoid possible name conflict.  
	  [ruby-core:23907]

Sat Jun 20 06:56:31 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: edited rdoc.

	* rational.c: ditto.

Sat Jun 20 05:08:59 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: edited rdoc.

	* rational.c: ditto.

Sat Jun 20 04:30:35 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (nurat_abs): removed.

Sat Jun 20 03:34:16 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: added rdoc.

Fri Jun 19 23:43:38 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* numeric.c: edited rdoc.

Fri Jun 19 22:58:16 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c: edited rdoc.

Fri Jun 19 22:21:17 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* numeric.c: edited rdoc.
