@@ -1,3 +1,7 @@
+Mon Jun 22 13:50:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (rb_io_fdatasync): new method IO#fdatasync.
+
 Sun Jun 21 22:33:05 2009  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* load.c (Init_load): $: must be readonly.  [ruby-dev:38690]
